@@ -1,40 +1,30 @@
 package de.envite.proa.repository;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.tuple;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
-import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.List;
-
+import de.envite.proa.entities.collaboration.MessageFlowDetails;
+import de.envite.proa.entities.datastore.DataAccess;
+import de.envite.proa.entities.process.*;
 import de.envite.proa.repository.datastore.DataStoreConnectionDao;
 import de.envite.proa.repository.datastore.DataStoreDao;
 import de.envite.proa.repository.messageflow.MessageFlowDao;
 import de.envite.proa.repository.processmodel.*;
 import de.envite.proa.repository.project.ProjectDao;
+import de.envite.proa.repository.tables.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
-import de.envite.proa.entities.datastore.DataAccess;
-import de.envite.proa.entities.process.EventType;
-import de.envite.proa.entities.process.ProcessActivity;
-import de.envite.proa.entities.process.ProcessDataStore;
-import de.envite.proa.entities.process.ProcessElementType;
-import de.envite.proa.entities.process.ProcessEvent;
-import de.envite.proa.entities.process.ProcessInformation;
-import de.envite.proa.entities.process.ProcessModel;
-import de.envite.proa.repository.tables.CallActivityTable;
-import de.envite.proa.repository.tables.DataStoreConnectionTable;
-import de.envite.proa.repository.tables.DataStoreTable;
-import de.envite.proa.repository.tables.ProcessConnectionTable;
-import de.envite.proa.repository.tables.ProcessEventTable;
-import de.envite.proa.repository.tables.ProcessModelTable;
-import de.envite.proa.repository.tables.ProjectTable;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.tuple;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.*;
 
 class ProcessModelRepositoryTest {
 
@@ -47,9 +37,21 @@ class ProcessModelRepositoryTest {
 	private static final String NEW_ACTIVITY_ID = "newActivityId";
 	private static final String EXISTING_ACTIVITY_ID = "existingActivityId";
 	private static final String DATA_STORE_LABEL = "DataStoreLabel";
-	private static final Long PROCESSM_MODEL_ID = 1L;
+	private static final Long PROCESS_MODEL_ID_1 = 1L;
+	private static final Long PROCESS_MODEL_ID_2 = 2L;
+	private static final Long PROCESS_MODEL_ID_3 = 3L;
+	private static final Long PROCESS_MODEL_ID_4 = 4L;
+	private static final Long PROCESS_MODEL_ID_5 = 5L;
 	private static final Long PROJECT_ID = 2341234L;
+	private static final String BPMN_PROCESS_ID = "bpmn123";
+	private static final byte[] BPMN_XML = "<xml></xml>".getBytes();
+	private static final String PARENT_PROCESS_MODEL_ID = "parentProcessModelId";
+	private static final String PROCESS_MODEL_NAME = "processModelName";
+	private static final String PROCESS_EVENT_ID = "processEventId";
+	private static final String PROCESS_EVENT_LABEL = "processEventName";
 
+	@InjectMocks
+	private ProcessmodelRepositoryImpl repository;
 	@Mock
 	private ProjectDao projectDao;
 	@Mock
@@ -88,7 +90,7 @@ class ProcessModelRepositoryTest {
 		ProcessModelTable processModelTable = new ProcessModelTable();
 		processModelTable.setName(EXISTING_PROCESS_MODEL_NAME);
 		processEventTable.setProcessModel(processModelTable);
-		List<ProcessEventTable> startEventTables = Arrays.asList(processEventTable);
+		List<ProcessEventTable> startEventTables = List.of(processEventTable);
 		when(processEventDao.getEventsForLabelAndType(COMMON_EVENT_LABEL, EventType.START, projectTable))
 				.thenReturn(startEventTables);
 
@@ -110,7 +112,7 @@ class ProcessModelRepositoryTest {
 		endEvent.setLabel(COMMON_EVENT_LABEL);
 		endEvent.setEventType(EventType.END);
 
-		model.setEvents(Arrays.asList(endEvent));
+		model.setEvents(List.of(endEvent));
 
 		// Act
 		repository.saveProcessModel(PROJECT_ID, model);
@@ -359,7 +361,7 @@ class ProcessModelRepositoryTest {
 		LocalDateTime dateTime = LocalDateTime.now();
 
 		ProcessModelTable processModel = new ProcessModelTable();
-		processModel.setId(PROCESSM_MODEL_ID);
+		processModel.setId(PROCESS_MODEL_ID_1);
 		processModel.setName(EXISTING_PROCESS_MODEL_NAME);
 		processModel.setDescription(PROCESS_DESCRIPTION);
 		processModel.setCreatedAt(dateTime);
@@ -383,6 +385,225 @@ class ProcessModelRepositoryTest {
 		assertThat(processInformation)//
 				.hasSize(1)//
 				.extracting("id", "processName", "description", "createdAt")//
-				.contains(tuple(PROCESSM_MODEL_ID, EXISTING_PROCESS_MODEL_NAME, PROCESS_DESCRIPTION, dateTime));
+				.contains(tuple(PROCESS_MODEL_ID_1, EXISTING_PROCESS_MODEL_NAME, PROCESS_DESCRIPTION, dateTime));
+	}
+
+	@Test
+	public void testFindByNameOrBpmnProcessId_FindById() {
+		ProjectTable project = new ProjectTable();
+		ProcessModelTable process = new ProcessModelTable();
+
+		when(projectDao.findById(PROJECT_ID)).thenReturn(project);
+		when(processModelDao.findByName(NEW_PROCESS_MODEL_NAME, project)).thenReturn(null);
+		when(processModelDao.findByBpmnProcessId(BPMN_PROCESS_ID, project)).thenReturn(process);
+
+		ProcessModelTable result = repository.findByNameOrBpmnProcessId(NEW_PROCESS_MODEL_NAME, BPMN_PROCESS_ID,
+				PROJECT_ID);
+
+		assertThat(result).isEqualTo(process);
+		verify(projectDao, times(1)).findById(PROJECT_ID);
+		verify(processModelDao, times(1)).findByName(NEW_PROCESS_MODEL_NAME, project);
+		verify(processModelDao, times(1)).findByBpmnProcessId(BPMN_PROCESS_ID, project);
+	}
+
+	@Test
+	public void testFindByNameOrBpmnProcessId_FindByName() {
+		ProjectTable project = new ProjectTable();
+		ProcessModelTable process = new ProcessModelTable();
+
+		when(projectDao.findById(PROJECT_ID)).thenReturn(project);
+		when(processModelDao.findByName(EXISTING_PROCESS_MODEL_NAME, project)).thenReturn(process);
+
+		ProcessModelTable result = repository.findByNameOrBpmnProcessId(EXISTING_PROCESS_MODEL_NAME, BPMN_PROCESS_ID,
+				PROJECT_ID);
+
+		assertThat(result).isEqualTo(process);
+		verify(projectDao, times(1)).findById(PROJECT_ID);
+		verify(processModelDao, times(1)).findByName(EXISTING_PROCESS_MODEL_NAME, project);
+		verify(processModelDao, never()).findByBpmnProcessId(any(), any());
+	}
+
+	@Test
+	public void testGetProcessModel() {
+		ProcessModelTable processModel = new ProcessModelTable();
+		processModel.setBpmnXml(BPMN_XML);
+
+		when(processModelDao.find(PROCESS_MODEL_ID_1)).thenReturn(processModel);
+
+		String result = repository.getProcessModel(PROCESS_MODEL_ID_1);
+
+		assertThat(result.getBytes()).isEqualTo(BPMN_XML);
+		verify(processModelDao, times(1)).find(PROCESS_MODEL_ID_1);
+	}
+
+	@Test
+	public void testSaveMessageFlows() {
+		List<String> messageFlowIds = List.of("1", "2", "3");
+		List<MessageFlowDetails> messageFlowDetails = new ArrayList<>();
+		for (String messageFlowId : messageFlowIds) {
+			MessageFlowDetails details = new MessageFlowDetails();
+			details.setBpmnId(messageFlowId);
+			messageFlowDetails.add(details);
+		}
+
+		repository.saveMessageFlows(messageFlowDetails, PROJECT_ID);
+
+		verify(messageFlowDao, times(3)).persist(any(MessageFlowTable.class));
+	}
+
+	@Test
+	public void testSaveProcessModel_WithParent() {
+		ProjectTable project = new ProjectTable();
+		when(projectDao.findById(PROJECT_ID)).thenReturn(project);
+
+		ProcessModel processModel = new ProcessModel();
+		processModel.setName(PROCESS_MODEL_NAME);
+		processModel.setParentBpmnProcessId(PARENT_PROCESS_MODEL_ID);
+
+		doNothing().when(processModelDao).persist(any(ProcessModelTable.class));
+
+		ProcessModelTable parent = new ProcessModelTable();
+		when(processModelDao.findByBpmnProcessId(PARENT_PROCESS_MODEL_ID, project)).thenReturn(parent);
+
+		doNothing().when(processModelDao).merge(any(ProcessModelTable.class));
+
+		repository.saveProcessModel(PROJECT_ID, processModel);
+
+		verify(projectDao, times(1)).findById(PROJECT_ID);
+		verify(processModelDao, times(1)).persist(any(ProcessModelTable.class));
+		verify(processModelDao, times(1)).findByBpmnProcessId(PARENT_PROCESS_MODEL_ID, project);
+		verify(processModelDao, times(2)).merge(any(ProcessModelTable.class));
+	}
+
+	@Test
+	public void testDeleteProcessModel_DeleteParentsAndChildren() {
+		ProcessModelTable processModel = new ProcessModelTable();
+		processModel.setId(PROCESS_MODEL_ID_1);
+
+		ProcessModelTable parent = new ProcessModelTable();
+		parent.setId(PROCESS_MODEL_ID_2);
+		parent.setChildren(List.of(processModel));
+		processModel.setParents(List.of(parent));
+
+		ProcessModelTable child1 = new ProcessModelTable();
+		child1.setId(PROCESS_MODEL_ID_3);
+		child1.setParents(List.of(processModel));
+		ProcessModelTable child2 = new ProcessModelTable();
+		child2.setId(PROCESS_MODEL_ID_4);
+		ProcessModelTable otherParent = new ProcessModelTable();
+		otherParent.setId(PROCESS_MODEL_ID_5);
+		child2.setParents(List.of(processModel, otherParent));
+
+		processModel.setChildren(List.of(child1, child2));
+
+		when(processModelDao.find(PROCESS_MODEL_ID_1)).thenReturn(processModel);
+		when(processModelDao.find(PROCESS_MODEL_ID_2)).thenReturn(parent);
+		when(processModelDao.find(PROCESS_MODEL_ID_3)).thenReturn(child1);
+		when(processModelDao.find(PROCESS_MODEL_ID_4)).thenReturn(child2);
+		when(processModelDao.find(PROCESS_MODEL_ID_5)).thenReturn(otherParent);
+
+		doNothing().when(dataStoreConnectionDao).deleteForProcessModel(any(Long.class));
+		doNothing().when(processConnectionDao).deleteForProcessModel(any(Long.class));
+		List<Long> expectedIds = List.of(PROCESS_MODEL_ID_1, PROCESS_MODEL_ID_3, PROCESS_MODEL_ID_2);
+		doNothing().when(processModelDao).delete(expectedIds);
+
+		repository.deleteProcessModel(PROCESS_MODEL_ID_1);
+
+		verify(processModelDao, times(1)).find(PROCESS_MODEL_ID_1);
+		verify(processModelDao, times(1)).find(PROCESS_MODEL_ID_2);
+		verify(processModelDao, times(1)).find(PROCESS_MODEL_ID_3);
+
+		verify(dataStoreConnectionDao, times(1)).deleteForProcessModel(PROCESS_MODEL_ID_1);
+		verify(dataStoreConnectionDao, times(1)).deleteForProcessModel(PROCESS_MODEL_ID_3);
+		verify(dataStoreConnectionDao, times(1)).deleteForProcessModel(PROCESS_MODEL_ID_2);
+
+		verify(processConnectionDao, times(1)).deleteForProcessModel(PROCESS_MODEL_ID_1);
+		verify(processConnectionDao, times(1)).deleteForProcessModel(PROCESS_MODEL_ID_3);
+		verify(processConnectionDao, times(1)).deleteForProcessModel(PROCESS_MODEL_ID_2);
+
+		verify(processModelDao, times(1)).delete(expectedIds);
+	}
+
+	@Test
+	public void testSaveProcessModel_UnknownEventType() {
+		ProjectTable project = new ProjectTable();
+		ProcessModel processModel = new ProcessModel();
+		ProcessEvent event = new ProcessEvent();
+		event.setEventType(EventType.INVALID);
+		processModel.setEvents(List.of(event));
+
+		when(projectDao.findById(PROJECT_ID)).thenReturn(project);
+		doNothing().when(processModelDao).persist(any(ProcessModelTable.class));
+
+		assertThrows(IllegalArgumentException.class, () -> repository.saveProcessModel(PROJECT_ID, processModel));
+
+		verify(projectDao, times(1)).findById(PROJECT_ID);
+		verify(processModelDao, times(1)).persist(any(ProcessModelTable.class));
+	}
+
+	@Test
+	public void testSaveProcessModel_ConnectIntermediateCatchEvent() {
+		ProjectTable project = new ProjectTable();
+		when(projectDao.findById(PROJECT_ID)).thenReturn(project);
+
+		doNothing().when(processModelDao).persist(any(ProcessModelTable.class));
+
+		ProcessModel processModel = new ProcessModel();
+		ProcessEvent event = new ProcessEvent();
+		event.setElementId(PROCESS_EVENT_ID);
+		event.setEventType(EventType.INTERMEDIATE_CATCH);
+		event.setLabel(PROCESS_EVENT_LABEL);
+		processModel.setEvents(List.of(event));
+
+		ProcessEventTable eventToConnect = new ProcessEventTable();
+
+		when(processEventDao.getEventsForLabelAndType(PROCESS_EVENT_LABEL, EventType.END, project)).thenReturn(
+				List.of(eventToConnect));
+		when(processEventDao.getEventsForLabelAndType(PROCESS_EVENT_LABEL, EventType.INTERMEDIATE_THROW,
+				project)).thenReturn(List.of(eventToConnect));
+
+		doNothing().when(processConnectionDao).persist(any(ProcessConnectionTable.class));
+
+		repository.saveProcessModel(PROJECT_ID, processModel);
+
+		verify(projectDao, times(1)).findById(PROJECT_ID);
+		verify(processModelDao, times(1)).persist(any(ProcessModelTable.class));
+		verify(processEventDao, times(1)).getEventsForLabelAndType(PROCESS_EVENT_LABEL, EventType.END, project);
+		verify(processEventDao, times(1)).getEventsForLabelAndType(PROCESS_EVENT_LABEL, EventType.INTERMEDIATE_THROW,
+				project);
+		verify(processConnectionDao, times(2)).persist(any(ProcessConnectionTable.class));
+	}
+
+	@Test
+	public void testSaveProcessModel_ConnectIntermediateThrowEvent() {
+		ProjectTable project = new ProjectTable();
+		when(projectDao.findById(PROJECT_ID)).thenReturn(project);
+
+		doNothing().when(processModelDao).persist(any(ProcessModelTable.class));
+
+		ProcessModel processModel = new ProcessModel();
+		ProcessEvent event = new ProcessEvent();
+		event.setElementId(PROCESS_EVENT_ID);
+		event.setEventType(EventType.INTERMEDIATE_THROW);
+		event.setLabel(PROCESS_EVENT_LABEL);
+		processModel.setEvents(List.of(event));
+
+		ProcessEventTable eventToConnect = new ProcessEventTable();
+
+		when(processEventDao.getEventsForLabelAndType(PROCESS_EVENT_LABEL, EventType.START, project)).thenReturn(
+				List.of(eventToConnect));
+		when(processEventDao.getEventsForLabelAndType(PROCESS_EVENT_LABEL, EventType.INTERMEDIATE_CATCH,
+				project)).thenReturn(List.of(eventToConnect));
+
+		doNothing().when(processConnectionDao).persist(any(ProcessConnectionTable.class));
+
+		repository.saveProcessModel(PROJECT_ID, processModel);
+
+		verify(projectDao, times(1)).findById(PROJECT_ID);
+		verify(processModelDao, times(1)).persist(any(ProcessModelTable.class));
+		verify(processEventDao, times(1)).getEventsForLabelAndType(PROCESS_EVENT_LABEL, EventType.START, project);
+		verify(processEventDao, times(1)).getEventsForLabelAndType(PROCESS_EVENT_LABEL, EventType.INTERMEDIATE_CATCH,
+				project);
+		verify(processConnectionDao, times(2)).persist(any(ProcessConnectionTable.class));
 	}
 }
